added projectupdate test file

--- a/ProductUpdatesChart.html
+++ b/ProductUpdatesChart.html
@@ -405,30 +405,117 @@ function drawChart() {
       <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
 	 
 	  <!-- Product Updates Charts -->
+	  <!-- Header - date - risk, IN - top 3 user stories, Backlog -->
 	  
-	<div style="font-size: 22px; margin-top:10%; margin-left: 7%"><font color="blue"><u><b>Dummies</b></u></font>
-     <div style="font-size: 22px; margin-left: 10%; display:inline-block"><font color="blue"><u><b>WEL</b></u></font></div>
-     <div style="font-size: 22px; margin-left: 10%; display:inline-block"><font color="blue"><u><b>WileyPLUS</b></u></font></div>
-     <div style="font-size: 22px; margin-left: 10%; display:inline-block"><font color="blue"><u><b>WPLS</b></u></font></div>
-    </div>
-    
-    
-    <div class=intext style="margin-left: 3%; margin-top: 160px; z-index: 3">Jun 30
-      <div style="display:inline-block; margin-left: 65px">Jun 30</div>
-      <div style="display:inline-block; margin-left: 65px">Aug 25</div>      
-      <div style="display:inline-block; margin-left: 65px">Sep 10</div>
-        <div class=innertext style="margin-top: -10px">next release
-			  <div style="display:inline-block; margin-left: 65px">next release</div>
-			  <div style="display:inline-block; margin-left: 70px">next release </div>      
-			  <div style="display:inline-block; margin-left: 70px">next release</div>
-		</div>    
-    </div>
+        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+<tbody valign="middle">
+    <tr>
+    <td width="20%" style="text-align:middle;"><strong>Dummies</strong></td>
+    <td width="20%"><strong>WEL</strong></td>
+    <td width="20%"><strong>WileyPLUS</strong></td>
+    <td width="20%"><strong>WPLS</strong></td>	
+    <td width="15%"><strong>DUE DATE</strong></td>	
+    <td width="5%"><strong>RISK</strong></td>
+    </tr>
+</tbody>
+</table>
 
-    <div id="donutchart2" style="width: 22%; height: 44%; margin-left:10px; display: inline-block; position: relative"></div>
-        <div id="donutchart3" style="width: 22%; height: 44%; margin-left:10px; display: inline-block"></div>
-        <div id="donutchart4" style="width:22%; height: 44%; margin-left:10px; display: inline-block"></div>
-       <div id="donutchart5" style="width: 22%; height: 44%; margin-left:10px; display: inline-block"></div>
-    <img src="https://i.imgsafe.org/5d8b819914.jpg" alt="" style="width: 50%; height: 10%; margin-left: 45%; margin-top: 20px"/>
+<button class="accordion">IN</button>
+<div class="panel">
+<table width="100%">
+<tbody valign="middle">
+  <tr>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>	
+    <td width="25%" style="width:21%;">08/17</td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>09/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>10/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>11/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>12/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  </tbody>
+</table>
+</div>
+
+<button class="accordion">BACKLOG</button>
+<div class="panel">
+  <table width="100%">
+<tbody valign="middle">
+  <tr>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>	
+    <td width="25%" style="width:21%;">08/17</td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>09/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>10/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>11/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tr>
+  <tr>
+    <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
+    <td>12/17</td>
+    <td><img src="images/circle_green.png"></td>
+  </tbody>
+</table>
+</div>
+
+
 
 	  <div class="lightbox" id="mylightbox">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
