--- a/ProductUpdatesChart.html
+++ b/ProductUpdatesChart.html
@@ -410,80 +410,186 @@ function drawChart() {
         <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
     <tr>
-    <td width="22%" style="text-align:middle;"><strong>Dummies</strong></td>
-    <td width="22%"><strong>WEL</strong></td>
-    <td width="22%"><strong>WileyPLUS</strong></td>
-    <td width="22%"><strong>WPLS</strong></td>	
-    <td width="15%"><strong>DUE DATE</strong></td>	
-    <td width="2%"><strong>RISK</strong></td>
+		<td width="46%" style="text-align:left;"><strong>NEXT RELEASE</strong></td>
+		<td width="21%"><strong>DUE DATE</strong></td>
+		<td width="12%"><strong>RISK</strong></td>
+    </tr>
+    <tr>
+		<td width="46%" style="text-align:left;"><strong>DUMMIES</strong></td>
+		<td width="21%"><strong>OCT 22</strong></td>
+		<td width="12%"><img src="images/circle_green.png"></td>
     </tr>
 </tbody>
 </table>
+	
+					<button class="accordion">IN RELEASE</button>
+					<div class="panel">
+					<table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
 
-<button class="accordion">IN</button>
-<div class="panel">
-<table width="100%">
+					<button class="accordion">BACKLOG</button>
+					<div class="panel">
+					  <table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
+	
+	        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
-  <tr>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>	
-    <td width="25%" style="width:21%;">08/17</td>
-    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
-  </tr>
-  <tr>
-    <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
-    <td>09/17</td>
-    <td><img src="images/circle_green.png"></td>
-  </tr>
-  <tr>
-    <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
-    <td>10/17</td>
-    <td><img src="images/circle_green.png"></td>
-  </tr>
-  </tbody>
+	
+    <tr>
+		<td width="46%" style="text-align:left;"><strong>WEL</strong></td>
+		<td width="21%"><strong>OCT 22</strong></td>
+		<td width="12%"><img src="images/circle_green.png"></td>
+    </tr>	
+	</tbody>
 </table>
-</div>
+	
+						<button class="accordion">IN RELEASE</button>
+					<div class="panel">
+					<table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
 
-<button class="accordion">BACKLOG</button>
-<div class="panel">
-  <table width="100%">
+					<button class="accordion">BACKLOG</button>
+					<div class="panel">
+					  <table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
+					
+	        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
-  <tr>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>	
-    <td width="25%" style="width:21%;">08/17</td>
-    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
-  </tr>
-  <tr>
-    <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
-    <td>09/17</td>
-    <td><img src="images/circle_green.png"></td>
-  </tr>
-  <tr>
-    <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="38%" style="text-align:left;width:11.5%;"><a href="#">Operationalizing Digital Delivery</a></td>		
-    <td>10/17</td>
-    <td><img src="images/circle_green.png"></td>
-  </tr>
-  </tbody>
+	
+    <tr>
+		<td width="46%" style="text-align:left;"><strong>WILEYPLUS</strong></td>
+		<td width="21%"><strong>OCT 22</strong></td>
+		<td width="12%"><img src="images/circle_green.png"></td>
+    </tr>
+	</tbody>
 </table>
-</div>
 
+							<button class="accordion">IN RELEASE</button>
+						<div class="panel">
+						<table width="100%">
+						<tbody valign="middle">
+						  <tr>
+							<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#">ITEM 2</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#">ITEM 3</a></td>
+						  </tr>
+						  </tbody>
+						</table>
+						</div>
+
+						<button class="accordion">BACKLOG</button>
+						<div class="panel">
+						  <table width="100%">
+						<tbody valign="middle">
+						  <tr>
+							<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#">ITEM 2</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#">ITEM 3</a></td>
+						  </tr>
+						  </tbody>
+						</table>
+						</div>
+						
+        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+<tbody valign="middle">
+	
+    <tr>
+		<td width="46%" style="text-align:left;"><strong>WPLS</strong></td>
+		<td width="21%"><strong>OCT 22</strong></td>
+		<td width="12%"><img src="images/circle_green.png"></td>
+    </tr>		
+</tbody>
+</table>
+
+					<button class="accordion">IN RELEASE</button>
+					<div class="panel">
+					<table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
+
+					<button class="accordion">BACKLOG</button>
+					<div class="panel">
+					  <table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>
 
 
 	  <div class="lightbox" id="mylightbox">
