--- a/ProductUpdatesChart.html
+++ b/ProductUpdatesChart.html
@@ -411,9 +411,34 @@ function drawChart() {
 <tbody valign="middle">
     <tr>
 		<td width="46%" style="text-align:left;"><strong>NEXT RELEASE</strong></td>
-		<td width="21%"><strong>DUE DATE</strong></td>
+		<td width="21%"><strong>DATE</strong></td>
 		<td width="12%"><strong>RISK</strong></td>
     </tr>
+	
+		</tbody>
+</table>
+	
+					<button class="accordion"><div style="float: left">IN RELEASE</div>
+  <div style="float: right">BACKLOG</div><div style="clear: both;"></div></button>
+					<div class="panel">
+					<table width="100%">
+					<tbody valign="middle">
+					  <tr>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#" style="float:left">ITEM 1</a><a href="#" style="float:right">ITEM 1</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#" style="float:left">ITEM 2</a><a href="#" style="float:right">ITEM 2</a></td>
+					  </tr>
+					  <tr>
+						<td style="text-align:left"><a href="#" style="float:left">ITEM 3</a><a href="#" style="float:right">ITEM 3</a></td>
+					  </tr>
+					  </tbody>
+					</table>
+					</div>	
+	
+	
+	        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+<tbody valign="middle">
     <tr>
 		<td width="46%" style="text-align:left;"><strong>DUMMIES</strong></td>
 		<td width="21%"><strong>OCT 22</strong></td>
@@ -422,40 +447,24 @@ function drawChart() {
 </tbody>
 </table>
 	
-					<button class="accordion">IN RELEASE</button>
+						<button class="accordion"><div style="float: left">IN RELEASE</div>
+  <div style="float: right">BACKLOG</div><div style="clear: both;"></div></button>
 					<div class="panel">
 					<table width="100%">
 					<tbody valign="middle">
 					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+						<td width="38%" style="text-align:left;width:46%;"><a href="#" style="float:left">ITEM 1</a><a href="#" style="float:right">ITEM 1</a></td>
 					  </tr>
 					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
+						<td style="text-align:left"><a href="#" style="float:left">ITEM 2</a><a href="#" style="float:right">ITEM 2</a></td>
 					  </tr>
 					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
+						<td style="text-align:left"><a href="#" style="float:left">ITEM 3</a><a href="#" style="float:right">ITEM 3</a></td>
 					  </tr>
 					  </tbody>
 					</table>
-					</div>
+					</div>	
 
-					<button class="accordion">BACKLOG</button>
-					<div class="panel">
-					  <table width="100%">
-					<tbody valign="middle">
-					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
-					  </tr>
-					  </tbody>
-					</table>
-					</div>
-	
 	        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
 	
@@ -467,40 +476,25 @@ function drawChart() {
 	</tbody>
 </table>
 	
-						<button class="accordion">IN RELEASE</button>
-					<div class="panel">
-					<table width="100%">
-					<tbody valign="middle">
-					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
-					  </tr>
-					  </tbody>
-					</table>
-					</div>
+							<button class="accordion"><div style="float: left">IN RELEASE</div>
+  <div style="float: right">BACKLOG</div><div style="clear: both;"></div></button>
+						<div class="panel">
+						<table width="100%">
+						<tbody valign="middle">
+						  <tr>
+							<td width="38%" style="text-align:left;width:46%;"><a href="#" style="float:left">ITEM 1</a><a href="#" style="float:right">ITEM 1</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#" style="float:left">ITEM 2</a><a href="#" style="float:right">ITEM 2</a></td>
+						  </tr>
+						  <tr>
+							<td style="text-align:left"><a href="#" style="float:left">ITEM 3</a><a href="#" style="float:right">ITEM 3</a></td>
+						  </tr>
+						  </tbody>
+						</table>
+						</div>
 
-					<button class="accordion">BACKLOG</button>
-					<div class="panel">
-					  <table width="100%">
-					<tbody valign="middle">
-					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
-					  </tr>
-					  </tbody>
-					</table>
-					</div>
-					
+
 	        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
 	
@@ -512,39 +506,24 @@ function drawChart() {
 	</tbody>
 </table>
 
-							<button class="accordion">IN RELEASE</button>
+							<button class="accordion"><div style="float: left">IN RELEASE</div>
+  <div style="float: right">BACKLOG</div><div style="clear: both;"></div></button>
 						<div class="panel">
 						<table width="100%">
 						<tbody valign="middle">
 						  <tr>
-							<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
+							<td width="38%" style="text-align:left;width:46%;"><a href="#" style="float:left">ITEM 1</a><a href="#" style="float:right">ITEM 1</a></td>
 						  </tr>
 						  <tr>
-							<td style="text-align:left"><a href="#">ITEM 2</a></td>
+							<td style="text-align:left"><a href="#" style="float:left">ITEM 2</a><a href="#" style="float:right">ITEM 2</a></td>
 						  </tr>
 						  <tr>
-							<td style="text-align:left"><a href="#">ITEM 3</a></td>
+							<td style="text-align:left"><a href="#" style="float:left">ITEM 3</a><a href="#" style="float:right">ITEM 3</a></td>
 						  </tr>
 						  </tbody>
 						</table>
 						</div>
 
-						<button class="accordion">BACKLOG</button>
-						<div class="panel">
-						  <table width="100%">
-						<tbody valign="middle">
-						  <tr>
-							<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-						  </tr>
-						  <tr>
-							<td style="text-align:left"><a href="#">ITEM 2</a></td>
-						  </tr>
-						  <tr>
-							<td style="text-align:left"><a href="#">ITEM 3</a></td>
-						  </tr>
-						  </tbody>
-						</table>
-						</div>
 						
         <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle">
@@ -557,39 +536,7 @@ function drawChart() {
 </tbody>
 </table>
 
-					<button class="accordion">IN RELEASE</button>
-					<div class="panel">
-					<table width="100%">
-					<tbody valign="middle">
-					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
-					  </tr>
-					  </tbody>
-					</table>
-					</div>
 
-					<button class="accordion">BACKLOG</button>
-					<div class="panel">
-					  <table width="100%">
-					<tbody valign="middle">
-					  <tr>
-						<td width="38%" style="text-align:left;width:46%;"><a href="#">ITEM 1</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 2</a></td>
-					  </tr>
-					  <tr>
-						<td style="text-align:left"><a href="#">ITEM 3</a></td>
-					  </tr>
-					  </tbody>
-					</table>
-					</div>
 
 
 	  <div class="lightbox" id="mylightbox">
