--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@ function drawChart() {
           ['Discovery', 'Projects',     0 /* Input custom x*/,  0 /* Input custom y*/],
           ['On Hold', 'Projects',       0 /* Input custom x*/,  0 /* Input custom y*/],
           ['Pilot', 'Projects',         0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['Prototype 1', 'Prototype', 11 /* Input custom x*/,  5 /* Input custom y*/],
-          ['Prototype 2', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],
-          ['POC 1', 'POC',             42 /* Input custom x*/,100 /* Input custom y*/],
-          ['POC 2', 'POC',             31 /* Input custom x*/, 90 /* Input custom y*/],
-          ['Discovery 1', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
-          ['Discovery 2', 'Discovery', 20 /* Input custom x*/, 50 /* Input custom y*/],
-          ['Discovery 3', 'Discovery', 40 /* Input custom x*/, 63 /* Input custom y*/],
-          ['Pilot 1', 'Pilot',         21 /* Input custom x*/, 50 /* Input custom y*/],
-          ['On Hold 1', 'On Hold',     21 /* Input custom x*/,  5 /* Input custom y*/],          
+		  ['Launch', 'Projects',        0                    ,  0                    ],
+		  ['Global Diagnostic Assessment', 'Launch', 22                    ,  5                    ],		  
+          ['DD Dashboard', 'Prototype', 52 /* Input custom x*/,  10 /* Input custom y*/],
+          ['Wiley Answers', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],
+          ['AGU Data Science Courseware', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],		  
+          ['Career Portal', 'POC',             42 /* Input custom x*/,100 /* Input custom y*/],
+          ['Wiley Problems', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
+          ['Wiley Standalone Adaptive (ORION)', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
+          ['Wiley Assessment Service', 'Pilot',         21 /* Input custom x*/, 50 /* Input custom y*/],
+          ['None', 'On Hold',     21 /* Input custom x*/,  5 /* Input custom y*/],          
         ]);
             // Instantiate and draw our chart, passing in some options.
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
@@ -52,13 +53,15 @@ function drawChart() {
           titleTextStyle: {color: '#3399CC', fontName: 'Helvetica', fontSize: 18},
           fontColor: 'black',
           fontFamily: 'Helvetica',
-          fontSize: 18
+          fontSize: 16
         });  
             // PROJECTS & IDEAS - DONUT CHART
           var data2 = google.visualization.arrayToDataTable([
             ['Status', 'none'],
-            ['Submitted',     10 /* Input custom y*/],
-            ['In Review',      6 /* Input custom y*/],
+            ['On Hold',     1 /* Input custom y*/],
+            ['Under Review',      4 /* Input custom y*/],
+            ['Approved',      7 /* Input custom y*/],
+            ['Not Approved',      2 /* Input custom y*/],			
           ]);
           var options2 = {
             legend: {position: 'bottom'},
@@ -71,9 +74,11 @@ function drawChart() {
             pieSliceText: 'value',
             fontSize: 14,
             slices: {
-            0: { color: '#66CC66' },
+            0: { color: '#3399CC' },
             1: { color: '#FFCC33' },
-            2: { color: '#CC3300'}}
+            2: { color: '#66CC66'},
+			3: { color: '#CC3300'}
+			}
           }; 
             var chart2 = new google.visualization.PieChart(document.getElementById('donutchart'));
             chart2.draw(data2, options2);   
@@ -270,15 +275,11 @@ function drawChart() {
       data9.addColumn('number', 'year 2016');
 	//Edit Data point (x, y1, y2)
       data9.addRows([
-        [0,  100, 210],
-        [.5, 150, 185],
-        [1,  200, 160],
-        [1.5,  250,   130],
-        [2,  210, 210],
-        [2.5,  180, 300],
-        [3,   180, 400],
-        [3.5,   , 400],
-        [4,  , 400],
+        [0,  14719037, 16554171],
+        [1,  14719037, 16554171],
+        [2,  , 18504590],
+        [3,   , 15892990],
+        [4,  , 4089835],
       ]);
 
       var options9 = {
@@ -292,7 +293,7 @@ function drawChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},100,200,300,400, {v:500, f:''}],            
+          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],          
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -312,15 +313,11 @@ function drawChart() {
       data10.addColumn('number', 'year 2016');
 	//Edit Data point (x, y1, y2)
       data10.addRows([
-        [0,  100, 210],
-        [.5, 150, 185],
-        [1,  200, 160],
-        [1.5,  250,   130],
-        [2,  210, 210],
-        [2.5,  180, 300],
-        [3,   180, 400],
-        [3.5,   , 400],
-        [4,  , 400],
+        [0,  14719037, 16554171],
+        [1,  14719037, 16554171],
+        [2,  , 18504590],
+        [3,   , 15892990],
+        [4,  , 4089835],
       ]);
 
       var options10 = {
@@ -334,7 +331,7 @@ function drawChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},100,200,300,400, {v:500, f:''}],             
+          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],             
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -487,7 +484,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
    	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div>
       
-<!-- Ideas and projects charts -->	
+<!-- Ideas and projects charts -->	 <!-- add appproved not approved -->
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 60%; height: 88%; float:left; margin-left:10px; margin-top: 38px"></div>
 
@@ -498,8 +495,9 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
     <tr>
     <td width="46%" style="text-align:left;"><strong>NAME</strong></td>
-    <td width="21%"><strong>DUE DATE</strong></td>
-    <td width="12%"><strong>RISK</strong></td>
+    <td width="21%"><strong>CURRENT PHASE</strong></td>	
+    <td width="21%"><strong>PHASE COMPLETION</strong></td>
+    <td width="12%"><strong>STATUS</strong></td>
     </tr>
 </tbody>
 </table>
