--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@ function drawChart() {
 	// PROJECTS - TREEMAP    
         var data = google.visualization.arrayToDataTable([ 
           ['ProjectType', 'Parent', 'Volume (size)', 'Status (color)'],
-          ['Projects', null,            0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['Prototype',   'Projects',   0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['POC', 'Projects',           0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['Discovery', 'Projects',     0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['On Hold', 'Projects',       0 /* Input custom x*/,  0 /* Input custom y*/],
-          ['Pilot', 'Projects',         0 /* Input custom x*/,  0 /* Input custom y*/],
-		  ['Launch', 'Projects',        0                    ,  0                    ],
-		  ['Global Diagnostic Assessment', 'Launch', 22                    ,  5                    ],		  
-          ['DD Dashboard', 'Prototype', 52 /* Input custom x*/,  10 /* Input custom y*/],
-          ['Wiley Answers', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],
-          ['AGU Data Science Courseware', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],		  
-          ['Career Portal', 'POC',             42 /* Input custom x*/,100 /* Input custom y*/],
-          ['Wiley Problems', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
-          ['Wiley Standalone Adaptive (ORION)', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
-          ['Wiley Assessment Service', 'Pilot',         21 /* Input custom x*/, 50 /* Input custom y*/],
-          ['None', 'On Hold',     21 /* Input custom x*/,  5 /* Input custom y*/],          
+          ['Projects', null,            					  0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Prototype',   'Projects',  						  0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['POC', 'Projects',          						  0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Discovery', 'Projects',    					  	  0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['On Hold', 'Projects',      						  0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Pilot', 'Projects',        					      0 /* Input custom x*/,  0 /* Input custom y*/],
+		  ['Launch', 'Projects',      						  0                    ,  0                    ],
+		  ['Global Diagnostic Assessment', 'Launch', 	     22                    ,  5                    ],		  
+          ['DD Dashboard', 'Prototype',					     22 /* Input custom x*/, 10 /* Input custom y*/],
+          ['Wiley Answers', 'Prototype', 					 22 /* Input custom x*/, 10 /* Input custom y*/],
+          ['AGU Data Science Courseware', 'Prototype',		 22 /* Input custom x*/, 10 /* Input custom y*/],		  
+          ['Career Portal', 'POC',            				 21 /* Input custom x*/,100 /* Input custom y*/],
+          ['Wiley Problems', 'Discovery', 					 25 /* Input custom x*/, 55 /* Input custom y*/],
+          ['Wiley Standalone Adaptive (ORION)', 'Discovery', 25 /* Input custom x*/, 55 /* Input custom y*/],
+          ['Wiley Assessment Service', 'Pilot',        		 10 /* Input custom x*/, 50 /* Input custom y*/],
+          ['None', 'On Hold',    					    	 30 /* Input custom x*/,  5 /* Input custom y*/],          
         ]);
             // Instantiate and draw our chart, passing in some options.
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
@@ -507,26 +507,31 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
+    <td width="25%" style="width:21%;">Discovery</td>	
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="25%" style="width:21%;">POC</td>	
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
+    <td width="25%" style="width:21%;">Launch</td>	
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
@@ -538,28 +543,33 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <div class="panel">
   <table width="100%">
 <tbody valign="middle">
-<tr>
+  <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
+    <td width="25%" style="width:21%;">Discovery</td>	
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="25%" style="width:21%;">POC</td>	
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
+    <td width="25%" style="width:21%;">Launch</td>	
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
@@ -573,26 +583,31 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
+    <td width="25%" style="width:21%;">Discovery</td>	
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="25%" style="width:21%;">POC</td>	
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
+    <td width="25%" style="width:21%;">Launch</td>	
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
