--- a/mainIndex.html
+++ b/mainIndex.html
@@ -437,16 +437,15 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
 
    </div>
-      
+
 <!-- Ideas and projects charts -->	
-	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 50%; height: 88%; float:left; margin-left:5%; margin-top: 35px; margin-bottom: 20px"></div>
 
 	<div style="margin-left:74%; margin-top:3%; position: absolute"><font size="4"><b>Ideas<b></font></div>
     <div id="donutchart" style="width: 40%; height: 65%; margin-left: 55%; margin-top: 80px; margin-bottom: 20px"></div>
 	  
-	  
-        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+      <hr style="height:1px;border:none;color:#3399CC;background-color:#3399CC; z-index: 1">	  
+        <table width="100%" style="padding-bottom:0;margin-top:-35px;">
 <tbody valign="middle">
     <tr>
     <td width="46%" style="text-align:left;"><strong>NAME</strong></td>
