--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     </tr>
 </tbody>
 </table>
-<button class="accordion">OPERATIONAL IMPROVEMENT</button>
-<div class="panel">
+<button class="accordion active">OPERATIONAL IMPROVEMENT</button>
+<div class="panel show">
 <table width="100%">
 <tbody valign="middle">
   <tr>
