--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     <div id="donutchart" style="width: 40%; height: 65%; margin-left: 60%; margin-top: 40px"></div>
 	  
 	  
-        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+        <table width="100%" style="margin-top:3%;padding-bottom:0;margin-bottom:0;border-top:1px solid #3399cc;">
 <tbody valign="middle">
     <tr>
     <td width="46%" style="text-align:left;"><strong>NAME</strong></td>
