--- a/index2.html
+++ b/index2.html
@@ -255,7 +255,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 	
 	<!-- Line Charts -->
 <div class="lines">        
-<a href="#">Dummies</a>      
+<a href="http://www.wiley.com/college/dddash/products/dummies_roadmap.xlsx">Dummies</a>      
   <div id="line"></div>
   <div class="revenue">    
         <p id="revA">$300k</p>
@@ -273,7 +273,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     </div>
 </div>
 <div class="lines">
-    <a href="#">WileyPLUS</a>
+    <a href="WileyPLUS (E4) : http://www.wiley.com/college/dddash/products/wpe4_roadmap.xlsx">WileyPLUS</a>
   <div id="line3"></div>
 <div class="revenue">
     <p id="revA">44k</p>
@@ -282,7 +282,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     </div>    
 </div>    
 <div class="lines">
-<a href="#">WPLS</a>    
+<a href="https://wileydpm.aha.io/published/6d52b31855e7f66cd0d015d8ecd0b5df?page=1">WPLS</a>    
   <div id="line4"></div>
 <div class="revenue">
     <p id="revA">44k</p>
@@ -319,7 +319,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
         
     <p>Oct<br> 22</p>
     </div>
-    <p id="infolink"><a href="#">WileyPLUS</a></p>
+    <p id="infolink"><a href="WileyPLUS (E4) : http://www.wiley.com/college/dddash/products/wpe4_roadmap.xlsx">WileyPLUS</a></p>
     <div class="e4release">
         <ul>
         <li>Lockdown Browser</li>
@@ -341,7 +341,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <p>Oct<br> 22</p>
     </div>
         
-    <p id="infolinkrightbottom"><a href="#">WPLS</a></p>
+    <p id="infolinkrightbottom"><a href="https://wileydpm.aha.io/published/6d52b31855e7f66cd0d015d8ecd0b5df?page=1">WPLS</a></p>
 <div class="wplsrelease">
         <ul>
         <li>Lockdown Browser</li>
@@ -431,46 +431,46 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%">
 <tbody valign="middle">
   <tr>
-    <td style="text-align:left"><a href="#">Global Diagnostic Assessment</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Global Diagnostic Assessment</a></td>
     <td width="25%" style="width:21%;">MVP Launch</td>	
     <td>09/30/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Wiley Assessment Service</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Assessment Service</a></td>
     <td width="25%" style="width:21%;">Pilot</td>	
     <td>12/15/17</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Career Portal</a></td>
     <td width="25%" style="width:21%;">POC</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_yellow.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_yellow.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Wiley Answers</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Answers</a></td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>09/15/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
-    <td style="text-align:left"><a href="#">Wiley Problems</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Problems</a></td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
     <td style="text-align:left"><a href="#">AGU Data Science Courseware</a></td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/16/16</td>
-    <td><img src="images/circle_red.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
   </tr> 
    <tr>
-    <td style="text-align:left"><a href="#">Wiley Standalone Adaptive (ORION)</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Standalone Adaptive (ORION)</a></td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_red.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
   </tr>   
   </tbody>
 </table>
