--- a/test.html
+++ b/test.html
@@ -290,8 +290,8 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <p id="revB">33k</p>
     </div>    
 </div>        
- <img src="https://s15.postimg.io/5omex6f0b/year_1.png"  width="100" height="55" alt="Legend" style="margin-top: 12%; margin-left: 1%">
-<img src="https://s11.postimg.io/evhnxppo3/year_2.png"  width="100" height="55" alt="Legend" style="margin-top: 8%; margin-left: 1%">       
+        <img src="https://s15.postimg.io/5omex6f0b/year_1.png"  width="100" height="55" alt="Legend" style="margin-top: 12%; margin-left: 1%">
+		<img src="https://s11.postimg.io/evhnxppo3/year_2.png"  width="100" height="55" alt="Legend" style="margin-top: 8%; margin-left: 1%">
       </div>   
 	 </div> 
     
@@ -372,9 +372,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
       
 <!-- Ideas and projects charts -->	
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
-    <div id="chart_div" style="width: 60%; height: 88%; float:left; margin-left:10px; margin-top: 38px"></div>
+    <div id="chart_div" style="width: 90%; height: 88%; float:left; margin-left:5%; margin-top: 10px; display: inline-block"></div>
 
-    <div id="donutchart" style="width: 40%; height: 65%; margin-left: 60%; margin-top: 40px"></div>
+    <div id="donutchart" style="width: 100%; height: 65%; display: inline-block"></div>
 	  
 	  
         <table width="100%" style="margin-top:3%;padding-bottom:0;margin-bottom:0;border-top:1px solid #3399cc;">
@@ -475,12 +475,11 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>   
   </tbody>
 </table>
-
-        </div>
-						<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+       </div>
+		<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
   </div>
 <div class="row">    
-<div class="twelve columns">    
+<div class="six columns" style="position: absolute; margin-top: 37%">    
       <div class="headline"><h1>Reliability &amp; Usage
    	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="" style="float:right;padding-right:0.5em;"/></h1>
       </div>
@@ -536,12 +535,12 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   </tbody>
 </table>
-    </div>  
+    </div> 
     </div>
 </div>
 </div>     
 
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Placed at the end of the document so the pages load faster  https://s12.postimg.org/5kqulz00d/key_1.png -->
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 
