--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <p id="revB">33k</p>
     </div>  	
 </div>     
-<img src="https://i.imgsafe.org/4868df27f6.jpg"  width="125" height="65" alt="Legend" style="margin-top: 12%">
-<img src="https://i.imgsafe.org/48693cd966.jpg"  width="125" height="65" alt="Legend" style="margin-top: 8%">
+<img src="https://s15.postimg.io/5omex6f0b/year_1.png"  width="100" height="55" alt="Legend" style="margin-top: 12%; margin-left: 1%">
+<img src="https://s11.postimg.io/evhnxppo3/year_2.png"  width="100" height="55" alt="Legend" style="margin-top: 8%; margin-left: 1%">
 
       </div>   
 	 
@@ -539,6 +539,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 </table>
 
         </div>
+				<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
   </div>
   
 
