--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     </tr>
 </tbody>
 </table>
-<button class="accordion">OPERATIONAL IMPROVEMENT</button>
-<div class="panel">
+<button class="accordion active">OPERATIONAL IMPROVEMENT</button>
+<div class="panel show">
 <table width="100%">
 <tbody valign="middle">
   <tr>
@@ -372,47 +372,47 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%">
 <tbody valign="middle">
   <tr>
-    <td style="text-align:left"><a href="#">Global Diagnostic Assessment</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Global Diagnostic Assessment</a></td>
     <td width="25%" style="width:21%;">MVP Launch</td>	
     <td>09/30/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Wiley Assessment Service</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Assessment Service</a></td>
     <td width="25%" style="width:21%;">Pilot</td>	
     <td>12/15/17</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Career Portal</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Career Portal</a></td>
     <td width="25%" style="width:21%;">POC</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_yellow.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_yellow.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Wiley Answers</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Answers</a></td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>09/15/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
-    <td style="text-align:left"><a href="#">Wiley Problems</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Problems</a></td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
     <td style="text-align:left"><a href="#">AGU Data Science Courseware</a></td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/16/16</td>
-    <td><img src="images/circle_red.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
   </tr> 
    <tr>
-    <td style="text-align:left"><a href="#">Wiley Standalone Adaptive (ORION)</a></td>
+    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Standalone Adaptive (ORION)</a></td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
-    <td><img src="images/circle_red.png"></td>
-  </tr>   
+    <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
+  </tr>    
   </tbody>
 </table>
   
