--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@ function drawChart() {
           fontFamily: 'Helvetica',
           fontSize: 16
         });  
-            // PROJECTS & IDEAS - DONUT CHART
+            // PROJECTS & IDEAS - BUBBLE CHART
           var data2 = google.visualization.arrayToDataTable([
          ['ID', 'x', 'y', 'Status',     'Size'],
         ['Approved',    78.6,              1.67,      'Approved',  7],
         ['Not Approved',    79.24,              1.69,      'Not Approved',         4],
         ['Under Review',    79.73,               1.66,      'Under Review',         2],
-        ['On Hold',    80.26,              1.68,      'On Hold',    1],
+        ['On Hold',    80.06,              1.68,      'On Hold',    1],
         ['',    80.66,              1.78,      '',    0],
       ]);
          var options2 = {
