--- a/index2.html
+++ b/index2.html
@@ -205,7 +205,7 @@ function drawChart() {
       var options10 = {
        colors:['#66CC66','#3399CC'],      
         backgroundColor: '#F2F2F2',
-        legend: {position: 'bottom'},
+        legend: {position: 'none'},
         hAxis: {
           ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],  
           title: '',
@@ -248,12 +248,10 @@ function drawChart() {
 Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.com">pschiller@wiley.com</a>
 </li>
 <li>For WileyPLUS (E4) or WPLS, contact <b>Amanda Clinton</b>, Customer Engagement Coordinator | (1) 201-748-5966 | <a href="mailto:aclinton@wiley.com">aclinton@wiley.com</a></li></ul></div>    
-  	
-    <!-- YTD Sales Image: 
-	<img src="https://i.imgsafe.org/205d00492f.jpg" alt="" /> 
-	-->
+
 	
 	<!-- Line Charts -->
+	    
 <div class="lines">        
 <a href="http://www.wiley.com/college/dddash/products/dummies_roadmap.xlsx">Dummies</a>      
   <div id="line"></div>
@@ -264,7 +262,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
         </div>
 </div>
 <div class="lines">
-<a href="#">WEL</a>        
+<a href="#" style="margin-left: 40%">WEL</a>        
   <div id="line2"></div>
 <div class="revenue">
     <p id="revA">10k</p>
@@ -282,18 +280,18 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     </div>    
 </div>    
 <div class="lines">
-<a href="https://wileydpm.aha.io/published/6d52b31855e7f66cd0d015d8ecd0b5df?page=1">WPLS</a>    
+<a href="https://wileydpm.aha.io/published/6d52b31855e7f66cd0d015d8ecd0b5df?page=1" style="margin-left: 35%">WPLS</a>  	   
   <div id="line4"></div>
 <div class="revenue">
     <p id="revA">44k</p>
 <div id="revborder">Validation</div>
     <p id="revB">33k</p>
-    </div>    
-</div>        
- <img src="https://s15.postimg.io/5omex6f0b/year_1.png"  width="100" height="55" alt="Legend" style="margin-top: 12%; margin-left: 1%">
-<img src="https://s11.postimg.io/evhnxppo3/year_2.png"  width="100" height="55" alt="Legend" style="margin-top: 8%; margin-left: 1%">       
+    </div>  	
+</div>     
+<img src="https://s15.postimg.io/5omex6f0b/year_1.png"  width="100" height="55" alt="Legend" style="margin-top: 12%; margin-left: 1%">
+<img src="https://s11.postimg.io/evhnxppo3/year_2.png"  width="100" height="55" alt="Legend" style="margin-top: 8%; margin-left: 1%">
+
       </div>   
-	 </div> 
     
  
   <div class="row">
