Legend moved inside of expandable tables
Legend moved inside of expandable tables

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 </table>
 <button class="accordion active">OPERATIONAL IMPROVEMENT</button>
 <div class="panel show">
-<table width="100%">
+<table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">WileyPLUS Onboarding, Training & Support</a></td>
@@ -350,12 +350,13 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     <td><img src="images/circle_red.png"></td>
   </tr>
   </tbody>
-</table>
+</table>	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+
 </div>
 
 <button class="accordion">MAINTENANCE</button>
 <div class="panel">
-  <table width="100%">
+<table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">NONE</a></td>
@@ -364,12 +365,13 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   </tbody>
-</table>
+</table>	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+
 </div>
 
 <button class="accordion">NEW PRODUCT</button>
 <div id="foo" class="panel">
-<table width="100%">
+<table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Global Diagnostic Assessment</a></td>
@@ -415,9 +417,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>    
   </tbody>
 </table>
-  
+  	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+
     </div>
-	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
         </div>
 <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
