--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 95%; height: 88%; float:left; margin-left:3%; margin-top: 10px"></div>
 
-	<div style="position: relative"><font size="4"><center><b>Ideas<b></center></font></div>
+    <div class="ideaslabel">Ideas</div>
 	
     <div id="bubblechart" style="width: 80%; height: 100%; float:left; margin-left: 17%; margin-bottom:2%"></div>
 	  
@@ -422,7 +422,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
     </div>
-        </div>
+    </div>
 <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
       <img src="images/business-contact.png" data-featherlight="#productupdates" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
