--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ function drawChart() {
             // PROJECTS & IDEAS - BUBBLE CHART
           var data2 = google.visualization.arrayToDataTable([
          ['ID', 'x', 'y', 'Status',     'Size'],
-        ['Approved',    78.48,              1.69,      'Approved',  7],
-        ['Not Approved',    79.28,              1.72,      'Not Approved',         4],
-        ['Under Review',    79.67,               1.66,      'Under Review',         2],
-        ['On Hold',    80.06,              1.7,      'On Hold',    1],
-        ['',    80.66,              1.78,      '',    0],
+        ['Approved: 7',        78.35,              1.69,      'Approved',      70],
+        ['Not Approved: 2',    79.2,              1.72,      'Not Approved',  30],
+        ['Under Review: 4',    79.79,              1.66,      'Under Review',  40],
+        ['On Hold: 1',         80.21,              1.71,      'On Hold',        10],
+        ['',                80.66,              1.78,      '',              0],
       ]);
          var options2 = {
         title: 'Ideas',
@@ -68,9 +68,9 @@ function drawChart() {
         headerHeight:40,
         hAxis: {title: ''},
         vAxis: {title: ''},
-        sizeAxis: {maxSize:70},
+        sizeAxis: {maxSize:75},
         hAxisviewWindowMode:'pretty',
-        //tooltip: {trigger: 'none'},     
+        tooltip: {trigger: 'none'},     
         bubble: {textStyle: {fontSize: 11}},
         backgroundColor: '#F2F2F2',
         legend: {position: 'none'},
@@ -314,7 +314,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 95%; height: 88%; float:left; margin-left:3%; margin-top: 10px"></div>
 
-	<div style="position: relative"><font size="4"><center><b>Ideas<b></center></font></div>
+    <div class="ideaslabel">Ideas</div>
 	
     <div id="bubblechart" style="width: 80%; height: 100%; float:left; margin-left: 17%; margin-bottom:2%"></div>
 	  
@@ -422,7 +422,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   	<img src="https://s12.postimg.org/5kqulz00d/key_1.png"  width="220" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
     </div>
-        </div>
+    </div>
 <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
       <img src="images/business-contact.png" data-featherlight="#productupdates" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
