--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function drawChart() {
         sizeAxis: {maxSize:75},
         hAxisviewWindowMode:'pretty',
         tooltip: {trigger: 'none'},     
-        bubble: {textStyle: {fontSize: 11}},
+        bubble: {textStyle: {fontSize: 11}, textStyle: {auraColor: 'none', bold: true, fontSize: 10}},
         backgroundColor: '#F2F2F2',
         legend: {position: 'none'},
         chartAreabackgroundColor:{color:'#F2F2F2'},
@@ -443,7 +443,8 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
         <img src="images/calendar_page_green.png" />
     </div>
     <p id="releasedate">Oct<br>22</p>  
-		<div style="position: absolute; inline-block; float: left; margin-top: 110px"><b>Next Release:</b></div>	
+		<div style="position: absolute; inline-block; float: left; margin-top: 110px"><b>Next Release:</b></div>
+	
         <ul>
         <li>Lockdown Browser</li>
         <li>Printed Test Upgraded Functionality</li>
